# CharTracker

./: Dockerfile.app  Dockerfile.nginx  db.sqlite3  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  q.json
CharTracker/: asgi.py  settings.py  urls.py  wsgi.py
CharTracker/static/: style.css
app/: .env  helpers.py
app/templates/: index.html
helpers/: auth.py  main.py
oauth/: admin.py  models.py  oauth.py  urls.py
oauth/migrations/: 0001_initial.py  0002_userauthdetails_sub.py  0003_userauthdetails_create_date_and_more.py
staticfiles/: style.css  weeklystyle.css
templates/: base_generic.html  index.html
templates/registration/: login.html
weekly/: admin.py  models.py  urls.py  views.py
weekly/migrations/: 0001_initial.py  0002_weeklycharprogress_raidfinder_1_and_more.py  0003_weeklycharprogress_create_date_and_more.py  0004_questcompletionstatus.py
weekly/static/: style.css  weeklystyle.css
weekly/templates/weekly/: index.html  quest.html  questsearch.html  weeklies.html
