[tool.poetry]
name = "chartracker"
version = "0.1.0"
description = ""
authors = ["Matt Matheus <matt.matheus@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
fastapi = "^0.109.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
